Archive2/a8/a42ff0ae5aa5ec/output
main.cpp: In lambda function:
main.cpp:18:16: error: use of ‘terminal’ before deduction of ‘auto’
         return terminal(func(term)); // >---------+
                ^
